@@ -1,3 +1,7 @@
+(Flavio Botelho)
+- S.F. Patch 1764069 Replace "String" with "Integer" in PreparedStatement 
+  Parameters where appropiate.
+
 (Mark Diggory)
 - Guard against output invalid unqualified Dublin Core in OAIDCCrosswalk.
 
